--- a/views/ic_board_assistant.ejs
+++ b/views/ic_board_assistant.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Medical-Project</title>
+    <title>Assistant</title>
     <link rel="icon" type="image/png" href="/assets/img/logo.gif" />
     <!-- Tell the browser to be responsive to screen width -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
