--- a/views/header.ejs
+++ b/views/header.ejs
@@ -22,7 +22,17 @@
 
     </div> -->
     <!-- Static navbar -->
+    <div class="row">
+      <div class="col-md-5 mt-5 pt-5 text-right">
+        <h3 style="color:  #1c70a1;"><b>TIRUNELVELI MEDICAL COLLEGE</b></h3>
+      </div>
+      <div class="col-md-2">
     <div class="center">
-      <h1><img src="/assets/img/logo.gif" width="150" height="150"/></h1>
+      <h1 class=""><img src="/assets/img/logo.gif" width="150" height="150"/></h1>
        </div>
-    
+       
+       </div>
+       <div class="col-md-5 mt-5 pt-5">
+        <h3 style="color:  #1c70a1;"class="text-right"><b>ADMISSIONS REGISTRATION PORTAL</b></h3>
+      </div>
+    </div>
