--- a/views/ic_board_student.ejs
+++ b/views/ic_board_student.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Medical-Project</title>
+    <title>Public</title>
     <link rel="icon" type="image/png" href="/assets/img/logo.gif" />
     <!-- Tell the browser to be responsive to screen width -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -167,9 +167,9 @@
               <a href="javascript:course()">
                 <li><i class="fa fa-university"></i> My Admission</li></a
               ><br />
-              <a href="javascript:fees_file()">
+              <!-- <a href="javascript:fees_file()">
                 <li><i class="fa fa-money-bill-alt"></i> My Fees</li></a
-              ><br />
+              ><br /> -->
 
               <!-- <a href="/">
                 <li><i class="fa fa-file"></i> Reports</li></a
