--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
-<title>Medical Project</title>
+<title>TVMC</title>
 
 <link rel="icon" href="/assets/img/logo.gif" type="image/x-icon" />
 <link
@@ -24,6 +24,13 @@
 <%- include('../views/header'); -%>
 <!------ Include the above in your HEAD tag ---------->
 <div class="wrapper fadeInDown mt-5">
+  <div class="container-fluid">
+  <div class="row">
+<div class="col-md-3 text-center">
+  <h1 class="text-right"><img src="/assets/img/tn.png" width="170"/></h1>
+
+</div>
+    <div class="col-md-5 d-flex"style="left:33px">
   <div id="formContent">
     <!-- Tabs Titles -->
     <div class="formFooter">
@@ -79,5 +86,22 @@
       <br />
     </div>
   </div>
+  </div>
+  <div class="col-md-4"style="color:  #1c70a1;">
+    <h3 style="color:  #1c70a1;"class="ml-4 pl-1"><b>USER INSTRUCTIONS:</b></h3>
+    <ol id="ol">
+      <li>Only Candidates who have officially secured admissions through the All India or
+        State Counselling to this institute shall register for admissions in this portal
+      </li>
+      <li>All documents submitted through this portal will be officially verifiable</li>
+<li>
+  The admissions office reserves the right to accept the documents after verification
+</li>
+<li>Registration in this portal is essential to start admission process on reaching the campus.</li>
+    </ol>
+
+  </div>
+  </div>
+</div>
 </div>
 <%- include('../views/footer'); -%>
