--- a/views/receipt.ejs
+++ b/views/receipt.ejs
@@ -48,12 +48,19 @@
       .table td,
       .table thead th {
         text-align: left;
-        border-bottom: 1px solid black !important;
-        border-top: 1px solid black !important;
+       border: 1px solid black!important;
+       font-size: 20px;
+      }
+      li{
+        list-style: auto!important;
+        font-size: 20px;
+      }
+      ul{
+        left: 0!important;
       }
       @media print {
         body {
-          transform: scale(1.3) !important;
+          transform: scale(1.2) !important;
         }
       }
     </style>
@@ -71,7 +78,7 @@
     <section id="report" class="blue">
       <div class="container d-flex justify-content-center">
         <div id="reportcard" class="">
-          <div class="card m-4 p-3" id="bordert">
+          <div class="card mt-5 p-3" id="bordert">
             <div class="row text-center" id="top">
               <div class="col-md-2 text-center">
                 <img src="assets/img/r1.jpg" class="img-fluid" width="150" />
@@ -106,7 +113,7 @@
             <section id="receipt">
               <table class="table table-bordered">
                 <thead>
-                  <th colspan="2" class="text-center blue f-20">
+                  <th colspan="2" class="text-center blue "style="font-size:25px">
                     Acknowledgement
                   </th>
                 </thead>
@@ -146,10 +153,63 @@
                 </tbody>
               </table>
             </section>
+       
           </div>
+          <section id="files">
+            <div class="container mr-2"style="page-break-before:always">
+              <h2 style="font-size: 25px;">Document to be submitted in the Admission Office on arrival at campus
+              </h2>
+              <h5 class="blue f-20"><u>Original Document</u>
+              </h5>
+              <ul>
+                <li>Allotment Order
+                </li>
+                <li>NEET Score Card
+                </li>
+                <li>NEET Admit Card
+                </li>
+                <li>NEET Rank Letter
+                </li>
+                <li>X Standard Board Examination Mark Sheet
+                </li>
+                <li>X Standard Board Examination Pass Certificate (if applicable)
+                </li>
+                <li>XII Standard Board Examination Mark Sheet
+                </li>
+                <li>XII Standard Board Examination Pass Certificate (if applicable)
+                </li>
+                <li>School Transfer Certificate
+                </li>
+                <li>Community Certificate
+                </li>
+                <li>Conduct Certificate
+                </li>
+                <li>Migration Certificate (Except Tamilnadu State Board Candidates)
+                </li>
+                <li>Eligibility Certificate (Except Tamilnadu State Board Candidates)
+                </li>
+                <li>Hepatitis-b Vaccination Certificate	
+                </li>
+                <li>Passport sized Photo 4 Copies (Without Name Tag)
+                </li>
+      
+              </ul>
+              <h5 class="f-20"><u>Photocopy of the following documents</u>
+              </h5>
+              <ul>
+                <li>Aadhar Card
+                </li>
+                <li>PAN Card
+                </li>
+                <li>Bank Pass Book First Page 
+                </li>
+              </ul>
+            </div>
+          </section>
         </div>
       </div>
     </section>
+   
     <!-- jQuery bootstrap -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
